# simple-video-upscaler

./: Cargo.toml  README.md
src/: args.rs  arguments.rs  error.rs  frame.rs  main.rs  model.rs  video.rs
src/pipeline/: extract.rs  filter_duplicates.rs  merge.rs  mod.rs  progress.rs  upscale.rs
src/stages/: extract.rs  filter_duplicates.rs  merge.rs  mod.rs  progress.rs  upscale.rs
