[package]
name = "simple_upscaler"
version = "0.1.0"
edition = "2021"

[dependencies]
realcugan-rs = { git = "https://github.com/timarques/realcugan_rs", version = "1.0.0", features = ["models-se"] }
image = { version = "0.25.2", default-features = false, features = ["png"]}
crossbeam-channel = "0.5.13"
indicatif = "0.17.8"
thiserror = "1.0.64"

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo"
panic = "abort"
incremental = false
