[package]
name = "simple_video_upscaler"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["png"] }
crossbeam-channel = "0.5.13"
indicatif = "0.17.8"
thiserror = "1.0.64"
image-compare = "0.4.1"

[dependencies.realesrgan_rs]
git = "https://github.com/timarques/realesrgan_rs"
default-features = false
features = ["model-realesr-animevideov3", "model-realesrgan-plus", "model-realesrgan-plus-anime"]

[dependencies.realcugan_rs]
git = "https://github.com/timarques/realcugan_rs"
default-features = false
features = ["models-se"]

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo"
panic = "abort"
incremental = false
